# jogo-roleta

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  roleta.py  sonar-project.properties  teste.py
core/: forms.py  settings.py  urls.py
lasvegas/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
lasvegas/migrations/: 0001_initial.py  0002_auto_20240418_1850.py  0003_movement.py
lasvegas/static/: about.css  cadastro.css  login.css  main.css  main.js  rules.css  tela_inicial.css
lasvegas/static/polls/: roleta.css  roleta.js
lasvegas/templates/: base.html  navbar.html
lasvegas/templates/about/: about.html
lasvegas/templates/cadastro/: cadastro.html
lasvegas/templates/login/: login.html
lasvegas/templates/movement/: list.html
lasvegas/templates/regras/: rules.html
lasvegas/templates/roleta/: index.html
lasvegas/templates/tela_inicial/: tela.html
lasvegas/templates/wallet/: detail.html
lasvegas/tests/: __init__.py  test_movement.py  test_wallet.py
mysite/: settings.py  urls.py
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_jogo_cover.py  0003_remove_jogo_cover_remove_jogo_game_name.py  0004_jogo_cover_jogo_game_name.py  0005_alter_jogo_cover.py  0006_alter_jogo_cover.py
polls/static/polls/: credits.txt
polls/templates/polls/: index.html
